# gbemu

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
nix/: flake.nix
src/: args.rs  audio_player.rs  gpu.rs  joypad.rs  lib.rs  main.rs  memory_bus.rs  motherboard.rs  sound.rs
src/cpu/: instruction.rs  mod.rs  registers.rs
src/gpu/: lcd_registers.rs  mod.rs
src/mbc/: mbc0.rs  mbc1.rs  mod.rs
tests/: .gitignore  test_roms.rs
