[package]
name = "gbemu"
version = "0.1.0"
edition = "2021"

[dependencies]
lexopt = "0.3.0"
minifb = "0.28.0"

[patch.crates-io]
minifb = { git = "https://github.com/woojiq/rust_minifb.git", branch = "fix_released_keys_detection_on_wayland" }

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true

[profile.test]
overflow-checks = true

[profile.bench]
overflow-checks = true
