[package]
name = "gbemu"
version = "0.1.0"
edition = "2021"

[dependencies]
lexopt = "0.3.0"
minifb = { git = "https://github.com/emoon/rust_minifb", rev = "8c38fb79096d936fdc92993a865b333a58bd305e" }

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true

[profile.test]
overflow-checks = true

[profile.bench]
overflow-checks = true
